fix modal too low thus hinder keyboard phone

--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@ input[type="radio"] {
   max-width: 400px;
   width: 70vw;
   text-align: center;
-  transform: translateY(250%);
+  transform: translateY(110%);
 }
 
 .modal p {
